py-meshio: drop py37 subport

--- a/python/py-meshio/Portfile
+++ b/python/py-meshio/Portfile
@@ -25,17 +25,10 @@ checksums           rmd160  72ae13641e70f059f0325b6248064caa8a5b36ba \
                     sha256  f21f01abd9f29ba06ea119304b3d39e610421cfe93b9dd23362834919f87586d \
                     size    490922
 
-python.versions     37 38 39 310 311 312
+python.versions     38 39 310 311 312
 
 if {${name} ne ${subport}} {
-    python.pep517   yes
-
     depends_lib-append \
                     port:py${python.version}-numpy \
                     port:py${python.version}-rich
-
-    if {${python.version} < 38} {
-        depends_lib-append \
-                    port:py${python.version}-importlib-metadata
-    }
 }
