multiple python ports: enable python 3.12
drop python 3.7

--- a/python/py-pysal/Portfile
+++ b/python/py-pysal/Portfile
@@ -24,7 +24,7 @@ checksums               rmd160  9eeae2abf42bbf0e9bbed02fe2f2622fb97b9f4a \
                         sha256  ed84c663c8daf73f5d83daa1ce01f14915fde3cf21b5d46259905cc733336dfb \
                         size    37876
 
-python.versions         39 310 311
+python.versions         39 310 311 312
 
 if {${name} ne ${subport}} {
     depends_lib-append  \
