--- a/python/py-spaghetti/Portfile
+++ b/python/py-spaghetti/Portfile
@@ -24,7 +24,7 @@ checksums           rmd160  ab48d4d070edd4274c22c2151cb33a7a96f9b0ef \
                     sha256  9acf19e3b4bf72f83604bc1d00113712cbb7db7bd94984883f5823a6fb1da607 \
                     size    22156820
 
-python.versions     39 310 311
+python.versions     39 310 311 312
 
 if {${name} ne ${subport}} {
     depends_build-append \
