--- a/python/py-spopt/Portfile
+++ b/python/py-spopt/Portfile
@@ -29,7 +29,7 @@ checksums           rmd160  897ce8838c0b0224b03c2535f28c455ce2777dfc \
                     sha256  1edf615a8ab1bbae3881c742083e20f18d24724947e84bf2dd12ec38510bcf3a \
                     size    30545521
 
-python.versions     39 310 311
+python.versions     39 310 311 312
 
 if {${name} ne ${subport}} {
     depends_build-append \
