--- a/python/py-plotly/Portfile
+++ b/python/py-plotly/Portfile
@@ -4,7 +4,7 @@ PortSystem          1.0
 PortGroup           python 1.0
 
 name                py-plotly
-version             5.15.0
+version             5.19.0
 revision            0
 
 categories          python graphics
@@ -21,11 +21,11 @@ long_description \
 
 homepage            https://plotly.com/python/
 
-checksums           rmd160  1664fe0be9598b22ab79dbaa75c15161aabc0b9c \
-                    sha256  822eabe53997d5ebf23c77e1d1fcbf3bb6aa745eb05d532afd4b6f9a2e2ab02f \
-                    size    7757675
+checksums           rmd160  af64a6338e31e44b1fd9fa9ed9b943505c412012 \
+                    sha256  5ea91a56571292ade3e3bc9bf712eba0b95a1fb0a941375d978cc79432e055f4 \
+                    size    7849193
 
-python.versions     37 38 39 310 311
+python.versions     37 38 39 310 311 312
 
 if {${name} ne ${subport}} {
     depends_build-append \
