--- a/gis/qgis3/Portfile
+++ b/gis/qgis3/Portfile
@@ -287,7 +287,7 @@ set projdf "${projdf}} { default_variants +proj${pv} }"
 eval ${projdf}
 
 # Python variants
-set python_suffixes {38 39 310 311}
+set python_suffixes {38 39 310 311 312}
 set python_variants {}
 set plugin_variants {}
 foreach pyver ${python_suffixes} {
@@ -390,7 +390,7 @@ foreach pyver ${python_suffixes} {
     set python_default "${python_default}!\[variant_isset python${pyver}\] && "
 }
 set python_default [string range ${python_default} 0 end-4]
-set python_default "${python_default}} { default_variants +python311 +plugin_support311}"
+set python_default "${python_default}} { default_variants +python312 +plugin_support312}"
 eval ${python_default}
 
 # Python support default
@@ -399,7 +399,7 @@ foreach pyver ${python_suffixes} {
     set python_default "${python_default}!\[variant_isset python${pyver}\] && "
 }
 set python_default [string range ${python_default} 0 end-4]
-set python_default "${python_default}} { default_variants +python311 +plugin_support311}"
+set python_default "${python_default}} { default_variants +python312 +plugin_support312}"
 eval ${python_default}
 
 # Assert +pythonXY and +plugin_supportXY variants are in sync
@@ -445,5 +445,5 @@ if {${subport} eq ${name-ltr}} {
 notes-append \
     "Some QGIS plugins may fail with error message noting missing PyQt5.QtWebKit\
     module, this could be solved by manually installing the module with e.g.\
-    `sudo port install py311-pyqt5 +webkit` (just make sure you use the same Python\
+    `sudo port install py312-pyqt5 +webkit` (just make sure you use the same Python\
     version for py-pyqt5 as for the QGIS Python bindings)."
