py-plotly: drop python 3.7

--- a/python/py-plotly/Portfile
+++ b/python/py-plotly/Portfile
@@ -25,7 +25,7 @@ checksums           rmd160  af64a6338e31e44b1fd9fa9ed9b943505c412012 \
                     sha256  5ea91a56571292ade3e3bc9bf712eba0b95a1fb0a941375d978cc79432e055f4 \
                     size    7849193
 
-python.versions     37 38 39 310 311 312
+python.versions     38 39 310 311 312
 
 if {${name} ne ${subport}} {
     depends_build-append \
