xapian-bindings: add Ruby 3.3

--- a/devel/xapian-core/Portfile
+++ b/devel/xapian-core/Portfile
@@ -206,7 +206,7 @@ foreach v {2.7 3.6 3.7 3.8 3.9 3.10 3.11} {
 }
 
 # Ruby
-foreach v {2.1 2.2 2.3 2.4 2.5 2.6 2.7 3.0 3.1 3.2} {
+foreach v {2.1 2.2 2.3 2.4 2.5 2.6 2.7 3.0 3.1 3.2 3.3} {
     set v_no_dot [string map {. {}} ${v}]
     subport xapian-bindings-ruby${v_no_dot} "
         revision                0
