re-flex: in notes section, explain the renaming

--- a/devel/re-flex/Portfile
+++ b/devel/re-flex/Portfile
@@ -26,7 +26,7 @@ long_description    RE/flex is a regex-centric, fast lexical analyzer generator 
 
 homepage            https://www.genivia.com/doc/reflex/html/
 
-notes               "The executable and manpage are renamed to avoid conflict with the pre-existing \"reflex\" port."
+notes               "The executable and manpage are renamed to \"re-flex\" (consistent with the port name), avoiding conflict with the pre-existing \"reflex\" port."
 
 configure.args-append --program-transform-name=s,reflex,re-flex,g
 
