nmail: fix build on earlier systems via legacysupport

--- a/mail/nmail/Portfile
+++ b/mail/nmail/Portfile
@@ -3,7 +3,11 @@
 PortSystem          1.0
 PortGroup           cmake 1.1
 PortGroup           github 1.0
+PortGroup           legacysupport 1.1
 PortGroup           openssl 1.0
+
+# utimensat
+legacysupport.newest_darwin_requires_legacy 16
 
 github.setup        d99kris nmail 4.35 v
 revision            0
