--- a/python/py-jupyter_client/Portfile
+++ b/python/py-jupyter_client/Portfile
@@ -4,15 +4,14 @@ PortSystem          1.0
 PortGroup           python 1.0
 
 name                py-jupyter_client
-version             7.3.4
+version             8.6.0
 revision            0
 
 license             BSD
 supported_archs     noarch
 platforms           {darwin any}
 
-python.versions     37 38 39 310 311 312
-python.pep517       yes
+python.versions     38 39 310 311 312
 python.pep517_backend   hatch
 
 maintainers         {stromnov @stromnov} openmaintainer
@@ -22,18 +21,18 @@ long_description    {*}${description}
 
 homepage            https://jupyter.org
 
-checksums           rmd160  0e27a012764dd60e5985b0afe83f7cd9768c3589 \
-                    sha256  aa9a6c32054b290374f95f73bb0cae91455c58dfb84f65c8591912b8f65e6d56 \
-                    size    329871
+checksums           rmd160  d09591b465993f10f255463a9b55b40af5f215a1 \
+                    sha256  0642244bb83b4764ae60d07e010e15f0e2d275ec4e918a8f7b80fbbef3ca60c7 \
+                    size    339721
 
 if {${name} ne ${subport}} {
-    depends_build-append  port:py${python.version}-setuptools
-
-    depends_lib-append  port:py${python.version}-dateutil \
-                        port:py${python.version}-entrypoints \
-                        port:py${python.version}-jupyter_core \
-                        port:py${python.version}-nest_asyncio \
+    depends_lib-append  port:py${python.version}-jupyter_core \
+                        port:py${python.version}-dateutil \
+                        port:py${python.version}-zmq \
                         port:py${python.version}-tornado \
-                        port:py${python.version}-traitlets \
-                        port:py${python.version}-zmq
+                        port:py${python.version}-traitlets
+
+    if {${python.version} < 310} {
+        depends_lib-append  port:py${python.version}-importlib-metadata
+    }
 }
