--- a/python/py-jupyter_server/Portfile
+++ b/python/py-jupyter_server/Portfile
@@ -4,14 +4,14 @@ PortSystem          1.0
 PortGroup           python 1.0
 
 name                py-jupyter_server
-version             1.6.0
+version             2.12.5
 revision            0
 categories-append   devel
 license             BSD
 supported_archs     noarch
 platforms           {darwin any}
 
-python.versions     37 38 39 310 311 312
+python.versions     38 39 310 311 312
 
 maintainers         {stromnov @stromnov} openmaintainer
 
@@ -20,24 +20,30 @@ long_description    {*}${description}
 
 homepage            https://jupyter.org/
 
-checksums           rmd160  dc0b8fac7d780d1e3f4ca7318b0e1600385eb48b \
-                    sha256  348f2c744d1fa1676d314475e0be357a95b21cbe6e19d15c2a25a9ea647f99d2 \
-                    size    407632
+checksums           rmd160  ca6c45050dcb14dc7a06ed49c40ec31dc81d5f19 \
+                    sha256  0edb626c94baa22809be1323f9770cf1c00a952b17097592e40d03e6a3951689 \
+                    size    713833
 
 if {${name} ne ${subport}} {
-    depends_lib-append  port:py${python.version}-setuptools \
-                        port:py${python.version}-jinja2 \
-                        port:py${python.version}-tornado \
-                        port:py${python.version}-zmq \
+    depends_build-append    \
+                        port:py${python.version}-hatch-jupyter-builder
+
+    depends_lib-append  port:py${python.version}-anyio \
                         port:py${python.version}-argon2-cffi \
-                        port:py${python.version}-ipython_genutils \
-                        port:py${python.version}-traitlets \
-                        port:py${python.version}-jupyter_core \
+                        port:py${python.version}-jinja2 \
                         port:py${python.version}-jupyter_client \
-                        port:py${python.version}-nbformat \
+                        port:py${python.version}-jupyter_core \
+                        port:py${python.version}-jupyter_server_terminals \
                         port:py${python.version}-nbconvert \
+                        port:py${python.version}-nbformat \
+                        port:py${python.version}-packaging \
+                        port:py${python.version}-prometheus_client \
+                        port:py${python.version}-zmq \
                         port:py${python.version}-send2trash \
                         port:py${python.version}-terminado \
-                        port:py${python.version}-prometheus_client \
-                        port:py${python.version}-anyio
+                        port:py${python.version}-tornado \
+                        port:py${python.version}-traitlets \
+                        port:py${python.version}-websocket-client \
+                        port:py${python.version}-jupyter_events \
+                        port:py${python.version}-overrides
 }
