--- a/python/py-jupyterlab/Portfile
+++ b/python/py-jupyterlab/Portfile
@@ -4,14 +4,15 @@ PortSystem          1.0
 PortGroup           python 1.0
 
 name                py-jupyterlab
-version             3.0.13
+version             4.1.2
 revision            0
 categories-append   devel
 license             BSD
 supported_archs     noarch
 platforms           {darwin any}
 
-python.versions     37 38 39 310 311 312
+python.versions     38 39 310 311 312
+python.pep517_backend   hatch
 
 maintainers         {stromnov @stromnov} openmaintainer
 
@@ -24,35 +25,36 @@ long_description    JupyterLab enables you to work with documents and \
 
 homepage            https://jupyter.org/
 
-checksums           rmd160  60908e7b6ec964f1c9a159f8423837b0297cef7d \
-                    sha256  6aefaf11251309ffdd66ef20025f5165aeec26d59a83c76e4d02cc8f593bc9dc \
-                    size    9843200
+checksums           rmd160  5f7c303e32dd6f4ae05251f6bc9abd176d5b8d38 \
+                    sha256  5d6348b3ed4085181499f621b7dfb6eb0b1f57f3586857aadfc8e3bf4c4885f9 \
+                    size    21810592
 
 if {${name} ne ${subport}} {
-    python.pep517       no
-    depends_build-append \
-                        port:py${python.version}-jupyter_packaging
-    depends_lib-append  port:py${python.version}-setuptools \
-                        port:py${python.version}-ipython \
+#    depends_build-append \
+#                        port:py${python.version}-hatch-jupyter-builder
+
+    depends_lib-append  port:py${python.version}-async-lru \
+                        port:py${python.version}-httpx \
+                        port:py${python.version}-ipykernel \
+                        port:py${python.version}-jinja2 \
+                        port:py${python.version}-jupyter_core \
+                        port:py${python.version}-jupyter_server \
+                        port:py${python.version}-jupyter-lsp \
+                        port:py${python.version}-jupyterlab_server \
+                        port:py${python.version}-notebook_shim \
                         port:py${python.version}-packaging \
                         port:py${python.version}-tornado \
-                        port:py${python.version}-jupyter_core \
-                        port:py${python.version}-jupyter_packaging \
-                        port:py${python.version}-jupyterlab_server \
-                        port:py${python.version}-jupyter_server \
-                        port:py${python.version}-nbclassic \
-                        port:py${python.version}-jinja2
+                        port:py${python.version}-traitlets
 
-    post-patch {
-        # relax package requirements
-        reinplace "s|jupyter_packaging~=0.7.3|jupyter_packaging|" ${worksrcpath}/setup.py
-        reinplace "s|jupyterlab_server~=2.3|jupyterlab_server|" ${worksrcpath}/setup.py
-        reinplace "s|jupyter_server~=1.4|jupyter_server|" ${worksrcpath}/setup.py
-        reinplace "s|nbclassic~=0.2|nbclassic|" ${worksrcpath}/setup.py
+    if {${python.version} < 310} {
+        depends_lib-append  port:py${python.version}-importlib-metadata
     }
 
-    build.args-append   --skip-npm
+    if {${python.version} < 39} {
+        depends_lib-append  port:py${python.version}-importlib-resources
+    }
 
-    destroot.args-append \
-                        --skip-npm
+    if {${python.version} < 311} {
+        depends_lib-append  port:py${python.version}-tomli
+    }
 }
