--- a/python/py-jupyterlab_server/Portfile
+++ b/python/py-jupyterlab_server/Portfile
@@ -4,14 +4,15 @@ PortSystem          1.0
 PortGroup           python 1.0
 
 name                py-jupyterlab_server
-version             2.4.0
+version             2.25.3
 revision            0
 categories-append   devel
 license             BSD
 supported_archs     noarch
 platforms           {darwin any}
 
-python.versions     37 38 39 310 311 312
+python.versions     38 39 310 311 312
+python.pep517_backend   hatch
 
 maintainers         {stromnov @stromnov} openmaintainer
 
@@ -20,18 +21,20 @@ long_description    {*}${description}
 
 homepage            https://jupyter.org/
 
-checksums           rmd160  bd06e2f3c2eff402a9ffdd63d597eb13c51a0d41 \
-                    sha256  2a7f0b125a59a7cc543f62e5f9dea50b44b3459b3f679db7e3dbe0f8616f90bc \
-                    size    36297
+checksums           rmd160  753fcfd8b6d623151b6ee186dc60ac0d0ee31c17 \
+                    sha256  846f125a8a19656611df5b03e5912c8393cea6900859baa64fa515eb64a8dc40 \
+                    size    74625
 
 if {${name} ne ${subport}} {
-    depends_build-append \
-                        port:py${python.version}-setuptools
     depends_lib-append  port:py${python.version}-babel \
                         port:py${python.version}-jinja2 \
                         port:py${python.version}-json5 \
                         port:py${python.version}-jsonschema \
+                        port:py${python.version}-jupyter_server \
                         port:py${python.version}-packaging \
-                        port:py${python.version}-requests \
-                        port:py${python.version}-jupyter_server
+                        port:py${python.version}-requests
+
+    if {${python.version} < 310} {
+        depends_lib-append  port:py${python.version}-importlib-metadata
+    }
 }
