py-nbconvert: update to 7.16.1

--- a/python/py-nbconvert/Portfile
+++ b/python/py-nbconvert/Portfile
@@ -4,15 +4,14 @@ PortSystem          1.0
 PortGroup           python 1.0
 
 name                py-nbconvert
-version             7.2.9
+version             7.16.1
 revision            0
 categories-append   textproc
 license             BSD
 supported_archs     noarch
 platforms           {darwin any}
 
-python.versions     37 38 39 310 311 312
-python.pep517       yes
+python.versions     38 39 310 311 312
 python.pep517_backend hatch
 
 maintainers         {stromnov @stromnov} openmaintainer
@@ -24,9 +23,9 @@ homepage            https://jupyter.org/
 
 # Must remain in-sync with those in project build script.
 set style_css_ver   5.4.0
-set index_css_ver   3.1.11
-set light_css_ver   3.1.11
-set dark_css_ver    3.1.11
+set index_css_ver   4.0.2
+set light_css_ver   4.0.2
+set dark_css_ver    4.0.2
 
 set main_distfile   ${distfiles}
 set style_distfile  style-${style_css_ver}.css
@@ -47,25 +46,25 @@ distfiles           ${main_distfile}:main \
                     ${dark_distfile}:dark
 
 checksums           ${main_distfile} \
-                    rmd160  d821a832ca32047becb59e7ccdf6a5f59887a33b \
-                    sha256  a42c3ac137c64f70cbe4d763111bf358641ea53b37a01a5c202ed86374af5234 \
-                    size    870386 \
+                    rmd160  5e3d1ca20fb72374657afc572a01c12662fee16d \
+                    sha256  e79e6a074f49ba3ed29428ed86487bf51509d9aab613bd8522ac08f6d28fd7fd \
+                    size    854006 \
                     ${style_distfile} \
                     rmd160  05b48b82351654a627bb3a7815bd3808cacdc431 \
                     sha256  5865a609f4437b0464bc121cd567b619074e540a0515a3b82f222f764eb51e01 \
                     size    265101 \
                     ${index_distfile} \
-                    rmd160  198fa6687d1d33e3a3236cb48c9c6d22ea4f48a1 \
-                    sha256  0a3fc632f155c2c3f3c4a40b5adc19b94369b4ba8a780df50c33d61449d12717 \
-                    size    552369 \
+                    rmd160  c6b825c03ada89b2490ac56fe23527a133ec8cbb \
+                    sha256  917ff47850a7cc08fd0658026fda7672a85220aaab258e8849e891b37426f947 \
+                    size    240379 \
                     ${light_distfile} \
-                    rmd160  e13be340c00a4f72eb2f378581621102d7bccd42 \
-                    sha256  f1f9c2f5232945d501c16737edece840b125eb9c256cf5a45892e4c051be06d7 \
-                    size    14606 \
+                    rmd160  695dbb5ec518517cdb9b51440fed59e712f6d24b \
+                    sha256  11bf3558fd3ed353a4c1401ac0c1730d01df073f6436d357c5bbf02a03bd6962 \
+                    size    16019 \
                     ${dark_distfile} \
-                    rmd160  5fc75bcb18325bff34e1b8ffd9585ac6a544d618 \
-                    sha256  2b194f360a7851ff4da5a6d3af8afa20c683c0e41e02a27b56ea00a912801051 \
-                    size    15702
+                    rmd160  b06ee809c64124755c7eec971d9e9471d2599915 \
+                    sha256  795f2d5069737cbeb5cba01e6b5c7cadbde227c909e43004c5a60f58d5160aec \
+                    size    17102
 
 if {${name} ne ${subport}} {
     patchfiles-append \
@@ -74,14 +73,14 @@ if {${name} ne ${subport}} {
     depends_build-append \
                     port:py${python.version}-setuptools
 
+    # broken dependency: port:py${python.version}-jupyterlab_pygments
+
     depends_lib-append \
                     port:py${python.version}-beautifulsoup4 \
                     port:py${python.version}-bleach \
                     port:py${python.version}-defusedxml \
-                    port:py${python.version}-entrypoints \
                     port:py${python.version}-jinja2 \
                     port:py${python.version}-jupyter_core \
-                    port:py${python.version}-jupyterlab_pygments \
                     port:py${python.version}-markupsafe \
                     port:py${python.version}-mistune \
                     port:py${python.version}-nbclient \
