--- a/python/py-nbformat/Portfile
+++ b/python/py-nbformat/Portfile
@@ -4,14 +4,14 @@ PortSystem          1.0
 PortGroup           python 1.0
 
 name                py-nbformat
-version             5.4.0
-revision            1
-
+version             5.9.2
+revision            0
 license             BSD
 supported_archs     noarch
 platforms           {darwin any}
 
-python.versions     37 38 39 310 311 312
+python.versions     38 39 310 311 312
+python.pep517_backend   hatch
 
 maintainers         {stromnov @stromnov} openmaintainer
 
@@ -20,22 +20,16 @@ long_description    {*}${description}
 
 homepage            https://jupyter.org
 
-checksums           rmd160  4aacb630ecc392477278182881ef3ed54f5cd192 \
-                    sha256  44ba5ca6acb80c5d5a500f1e5b83ede8cbe364d5a495c4c8cf60aaf1ba656501 \
-                    size    137589
+checksums           rmd160  bc3b1484b429970750551a68b9b3d88df6b43939 \
+                    sha256  5f98b5ba1997dff175e77e0c17d5c10a96eaed2cbd1de3533d1fc35d5e111192 \
+                    size    141264
 
 if {${name} ne ${subport}} {
     depends_build-append \
-                    port:py${python.version}-setuptools
+                        port:py${python.version}-hatch-nodejs-version
 
-    depends_lib-append \
-                    port:py${python.version}-fastjsonschema \
-                    port:py${python.version}-jsonschema \
-                    port:py${python.version}-jupyter_core \
-                    port:py${python.version}-traitlets
-
-    if {${python.version} < 38} {
-        depends_run-append \
-                    port:py${python.version}-importlib-metadata
-    }
+    depends_lib-append  port:py${python.version}-fastjsonschema \
+                        port:py${python.version}-jsonschema \
+                        port:py${python.version}-jupyter_core \
+                        port:py${python.version}-traitlets
 }
