--- a/ruby/rb-narray/Portfile
+++ b/ruby/rb-narray/Portfile
@@ -1,10 +1,8 @@
 PortSystem		1.0
 PortGroup		ruby 1.0
-PortGroup       github 1.0
 
-version         0.5.9p9
-github.setup    masa16 narray ${version}
-ruby.setup		narray ${version} extconf.rb {README.en SPEC.en ChangeLog}
+ruby.branches   3.3 3.2 3.1
+ruby.setup      narray 0.6.1.2 gem {} rubygems
 
 maintainers		nomaintainer
 description		Numerical array package for ruby
@@ -17,6 +15,8 @@ long_description	NArray is a class of Numerical N-dimensional Array, \
 categories-append   math
 license				{Ruby GPL-2} BSD
 homepage            http://masa16.github.io/narray/
-checksums		    md5 37e1d845b81caaaa4fa2081e6c00806b
+checksums           rmd160  8e9d4b136e122ce0dcd8d258e94b438c32caef40 \
+                    sha256  73bf101929a1570e8034058e1296fec58d6c3386c26bf26810d33f70dd4236b7 \
+                    size    65024
 platforms		    darwin
 depends_build		    path:libexec/coreutils/libstdbuf.so:coreutils
