--- a/ruby/rb-narray/Portfile
+++ b/ruby/rb-narray/Portfile
@@ -1,22 +1,24 @@
-PortSystem		1.0
-PortGroup		ruby 1.0
+# -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:ft=tcl:et:sw=4:ts=4:sts=4
 
-ruby.branches   3.3 3.2 3.1
-ruby.setup      narray 0.6.1.2 gem {} rubygems
+PortSystem          1.0
+PortGroup           ruby 1.0
 
-maintainers		nomaintainer
-description		Numerical array package for ruby
-long_description	NArray is a class of Numerical N-dimensional Array, \
-  whose elements are 1/2/4-byte Integer, single/double-prec Real/Complex, \
-  and Ruby Object. This extension library incorporates fast calculation \
-  and easy manipulation of large numerical arrays into the Ruby language. \
-  NArray has features similar to NumPy, but NArray has vector \
-  and matrix subclasses.
+ruby.branches       3.3 3.2 3.1
+ruby.setup          narray 0.6.1.2 gem {} rubygems
+maintainers         nomaintainer
+description         Numerical array package for Ruby
+long_description    NArray is a class of Numerical N-dimensional Array, \
+                    whose elements are 1/2/4-byte Integer, \
+                    single/double-precision Real/Complex and Ruby Object. \
+                    This extension library incorporates fast calculation \
+                    and easy manipulation of large numerical arrays \
+                    into the Ruby language. NArray has features similar \
+                    to NumPy, but NArray has vector and matrix subclasses.
 categories-append   math
-license				{Ruby GPL-2} BSD
-homepage            http://masa16.github.io/narray/
+license             {Ruby GPL-2} BSD
+homepage            https://masa16.github.io/narray
 checksums           rmd160  8e9d4b136e122ce0dcd8d258e94b438c32caef40 \
                     sha256  73bf101929a1570e8034058e1296fec58d6c3386c26bf26810d33f70dd4236b7 \
                     size    65024
-platforms		    darwin
-depends_build		    path:libexec/coreutils/libstdbuf.so:coreutils
+depends_build-append \
+                    path:libexec/coreutils/libstdbuf.so:coreutils
