--- a/ruby/rb-simple_oauth/Portfile
+++ b/ruby/rb-simple_oauth/Portfile
@@ -1,7 +1,8 @@
 PortSystem			1.0
 PortGroup			ruby 1.0
 
-ruby.setup			simple_oauth 0.1.5 gem {} rubygems
+ruby.branches       3.3 3.2 3.1
+ruby.setup          simple_oauth 0.3.1 gem {} rubygems
 maintainers			{kimuraw @kimuraw} openmaintainer
 description			Simply builds and verifies OAuth headers
 long_description	Simply builds and verifies OAuth headers
@@ -9,8 +10,8 @@ long_description	Simply builds and verifies OAuth headers
 homepage			https://github.com/laserlemon/simple_oauth
 license				MIT
 
-checksums			md5     d46f9be42710da270687569e00ebf5a7 \
-					sha1    5a66a9e67119b2bf95ccda1e24cbc623ec8f54f2 \
-					rmd160  f6812df6e63d4572247eb475943a27cae2e9bb4d
+checksums           rmd160  b403a6ef5b1a57dcff2aa2b17cefcb403761ed55 \
+                    sha256  147992e2c872c5b3cb97292e4a4ef099c9dbb76112760002ad93f1534d8c8937 \
+                    size    8704
 platforms			any
 supported_archs		noarch
