--- a/ruby/rb-simple_oauth/Portfile
+++ b/ruby/rb-simple_oauth/Portfile
@@ -1,17 +1,19 @@
-PortSystem			1.0
-PortGroup			ruby 1.0
+# -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:ft=tcl:et:sw=4:ts=4:sts=4
+
+PortSystem          1.0
+PortGroup           ruby 1.0
 
 ruby.branches       3.3 3.2 3.1
 ruby.setup          simple_oauth 0.3.1 gem {} rubygems
-maintainers			{kimuraw @kimuraw} openmaintainer
-description			Simply builds and verifies OAuth headers
-long_description	Simply builds and verifies OAuth headers
+maintainers         {kimuraw @kimuraw} openmaintainer
+description         Simply builds and verifies OAuth headers
+long_description    {*}${description}
 
-homepage			https://github.com/laserlemon/simple_oauth
-license				MIT
+homepage            https://github.com/laserlemon/simple_oauth
+license             MIT
 
 checksums           rmd160  b403a6ef5b1a57dcff2aa2b17cefcb403761ed55 \
                     sha256  147992e2c872c5b3cb97292e4a4ef099c9dbb76112760002ad93f1534d8c8937 \
                     size    8704
-platforms			any
-supported_archs		noarch
+platforms           any
+supported_archs     noarch
