--- a/net/sshuttle/Portfile
+++ b/net/sshuttle/Portfile
@@ -4,8 +4,8 @@ PortSystem          1.0
 PortGroup           python 1.0
 
 name                sshuttle
-version             1.1.1
-revision            2
+version             1.1.2
+revision            0
 
 homepage            https://sshuttle.readthedocs.io/en/stable
 
@@ -21,9 +21,9 @@ supported_archs     noarch
 maintainers         {gmail.com:herby.gillot @herbygillot} \
                     openmaintainer
 
-checksums           md5 40d53cc95aa594edeba25b6c3040fb97 \
-                    rmd160 7997b88fd29a7d47a989d7593d3a2fd8bf048513 \
-                    sha256 f5a3ed1e5ab1213c7a6df860af41f1a903ab2cafbfef71f371acdcff21e69ee6
+checksums           rmd160  a375f4b1d551c5ca90adcfe0f8eb24c4501580e9 \
+                    sha256  f1f82bc59c45745df7543f38b0fa0f1a6a34d8a9e17dd8d9e5e259f069c763d6\
+                    size    59481
 
 python.default_version \
                     312
