sshuttle: add poetry backend

--- a/net/sshuttle/Portfile
+++ b/net/sshuttle/Portfile
@@ -41,3 +41,5 @@ depends_test-append port:py${python.version}-flake8 \
                     port:py${python.version}-pytest \
                     port:py${python.version}-pytest-cov \
                     port:py${python.version}-pytest-runner
+
+python.pep517_backend poetry
