py-babel: restore py36 subport
This still has dependents, and so can't be removed until the dependents
are removed.

--- a/python/py-babel/Portfile
+++ b/python/py-babel/Portfile
@@ -12,7 +12,7 @@ platforms           {darwin any}
 license             BSD
 supported_archs     noarch
 
-python.versions     27 37 38 39 310 311 312
+python.versions     27 36 37 38 39 310 311 312
 
 maintainers         {stromnov @stromnov} openmaintainer
 
@@ -29,13 +29,19 @@ checksums           rmd160  aad51b5d581f5ad2034a23c10f50530697b89902 \
                     size    10795622
 
 if {${name} ne ${subport}} {
-    if {${python.version} eq 27} {
+    if {${python.version} == 27} {
         version             2.9.1
         revision            0
         checksums           rmd160  b833ad421470429e1740f19dc79e02842e3ff4b1 \
                             sha256  bc0c176f9f6a994582230df350aa6e05ba2ebe4b3ac317eab29d9be5d2768da0 \
                             size    8683505
-        python.pep517       no
+        depends_lib-append  port:py${python.version}-setuptools
+    } elseif {${python.version} == 36} {
+        version             2.11.0
+        revision            0
+        checksums           rmd160  1827b2e6f10ab38da79958f96cdf00ee17cd3c05 \
+                            sha256  5ef4b3226b0180dedded4229651c8b0e1a3a6a2837d45a073272f313e4cf97f6 \
+                            size    9346097
         depends_lib-append  port:py${python.version}-setuptools
     }
 
