--- a/python/py-pygments/Portfile
+++ b/python/py-pygments/Portfile
@@ -13,7 +13,7 @@ license             BSD
 supported_archs     noarch
 platforms           {darwin any}
 
-python.versions     27 37 38 39 310 311 312
+python.versions     27 35 36 37 38 39 310 311 312
 python.pep517_backend   hatch
 
 maintainers         {stromnov @stromnov} openmaintainer
@@ -36,19 +36,32 @@ distname            pygments-${version}
 
 if {${name} ne ${subport}} {
 
-    if {${python.version} eq 27} {
+    if {${python.version} == 27} {
         version             2.5.2
         revision            0
-        distname            ${python.rootname}-${version}
         checksums           rmd160  e38d8d2e69af42784f2b7235ba5ee464df71901b \
                             sha256  98c8aa5a9f778fcd1026a17361ddaf7330d1b7c62ae97c3bb0ae73e0b9b6b0fe \
                             size    20263984
-        python.pep517       no
-        depends_lib-append  port:py${python.version}-setuptools
+    } elseif {${python.version} == 35} {
+        version             2.11.2
+        revision            0
+        checksums           md5 217b4355612df4b61dc570df4b0148ba \
+                            rmd160 17441b0692d892a6c95429ec3dc004cd0c7ccef3 \
+                            sha256 4e426f72023d88d03b2fa258de560726ce890ff3b630f88c21cbb8b2503b8c6a
+    } elseif {${python.version} == 36} {
+        version             2.14.0
+        revision            0
+        checksums           md5 447be4afb076c8325a7dc659aff5b931 \
+                            rmd160 ef3c29232ca28084efc5be0a1e93ed1ae56cd7c6 \
+                            sha256 b3ed06a9e8ac9a9aae5a6f5dbe78a8a58655d17b43b93c078f094ddc476ae297
     }
 
-    if {${python.version} eq 37} {
+    if {${python.version} in {37 36}} {
         depends_run-append  port:py${python.version}-importlib-metadata
+    }
+    if {${python.version} < 37} {
+        distname            ${python.rootname}-${version}
+        depends_lib-append  port:py${python.version}-setuptools
     }
 
     depends_run-append  port:pygments_select
