napari: set platforms darwin any

--- a/science/napari/Portfile
+++ b/science/napari/Portfile
@@ -17,6 +17,7 @@ long_description    {*}${description} It's designed for browsing, annotating, an
                     (for the GUI), vispy (for performant GPU-based rendering), and the \
                     scientific Python stack (numpy, scipy).
 supported_archs     noarch
+platforms           {darwin any}
 homepage            https://github.com/napari/napari
 
 checksums           rmd160  a8d88071df93a21a098296128c767cbddca03fd5 \
