xapian-core: fix build when AI_NUMERICSERV not defined

--- a/devel/xapian-core/Portfile
+++ b/devel/xapian-core/Portfile
@@ -35,6 +35,9 @@ if {${subport} eq ${name}} {
                                 sha256  eda5ae6dcf6b0553a8676af64b1fd304e998cd20f779031ccaaf7ab9a373531a \
                                 size    3194164
 
+    # https://github.com/xapian/xapian/pull/332
+    patchfiles-append           resolver.h-use-AI_NUMERICSERV-only-when-defined.patch
+
     # TODO: Fix xapian-config to not require the .la file
     # /opt/local/bin/xapian-config --ltlibs --cxxflags
     # /opt/local/bin/xapian-config: Can't find libxapian.la to link against.
