jasper: update to 4.2.1

--- a/graphics/jasper/Portfile
+++ b/graphics/jasper/Portfile
@@ -4,7 +4,13 @@ PortSystem      1.0
 PortGroup       cmake 1.0
 PortGroup       github 1.0
 
-github.setup    jasper-software jasper 4.2.0 version-
+github.setup    jasper-software jasper 4.2.1 version-
+revision        0
+
+checksums       rmd160  f253fc7a9acd6ececee8ec183e26e24e5b87cd31 \
+                sha256  2d1e21f1b346709bc176156173c6d77a3e5543346764085dbde732215120b796 \
+                size    2123323
+
 categories      graphics
 license         JasPer-2
 maintainers     {jmr @jmroot} openmaintainer
@@ -18,8 +24,6 @@ long_description \
 homepage        http://www.ece.uvic.ca/~mdadams/jasper/
 
 github.tarball_from releases
-checksums       rmd160 371aae9282abf7a8af8ddd606abd207c53de3c4a \
-                sha256 69f0b08a0cc281a06eaf7feed510736854bbff9af89ab1d01b77382ad57ec957
 
 depends_lib     path:include/turbojpeg.h:libjpeg-turbo
 
