qgis3, qgis3-ltr: update to 3.36.0 and 3.34.4 (LTR)

--- a/gis/qgis3/Portfile
+++ b/gis/qgis3/Portfile
@@ -25,25 +25,23 @@ subport ${name-ltr} {}
 
 if {${subport} eq ${name}} {
     # Latest version
-    github.setup    qgis QGIS 3_34_3 final-
+    github.setup    qgis QGIS 3_36_0 final-
     revision        0
     set app_name    QGIS3
 
-    checksums       rmd160  963edaf4b9e3ea437738738dd3c5ee81dd090b58 \
-                    sha256  c6bb8859f5ef8574e6d471a9ca452560259dbfd647fff30b00afa0eea6b7b0e7 \
-                    size    194525993
+    checksums       rmd160  4f4abd2b50ece1e094f27d6fd4c4cb5c38fb944d \
+                    sha256  4c2fd5d44b95d861ffbb8ded8724ad38b49d601ccd27fa38457f6127cfc6c87b \
+                    size    199052249
 } else {
     # LTR version
-    github.setup    qgis QGIS 3_28_15 final-
+    github.setup    qgis QGIS 3_34_4 final-
     revision        0
     set app_name    QGIS3-LTR
     description     {*}${description} (LTR)
 
-    checksums       rmd160  bcc7d0d001e967b47b90e22baf08d186507a3bd9 \
-                    sha256  e6139f1f66a269ede23635819baee120088f2bfabf5d69cd78592441d80de819 \
-                    size    184868036
-
-    patchfiles-append patch-findpdal-cmake.diff
+    checksums       rmd160  0730bdf3e121a185224f4602124f5a359ea6c8ac \
+                    sha256  890526e82dca56ad39574b414dfb516438bea739076d49f37cb0b3fa6f1abd5f \
+                    size    196392186
 }
 
 version             [string map {_ .} ${github.version}]
@@ -165,6 +163,7 @@ configure.args-append \
                     -DUSE_OPENCL=OFF \
                     -DWITH_3D=ON \
                     -DWITH_BINDINGS=FALSE \
+                    -DWITH_DRACO=OFF \
                     -DWITH_GRASS7=OFF \
                     -DWITH_GRASS8=OFF \
                     -DWITH_GSL=ON \
@@ -174,29 +173,13 @@ configure.args-append \
                     -DWITH_QWTPOLAR=ON \
                     -DWITH_SERVER=OFF
 
-if {${subport} eq ${name}} {
-    configure.args-append \
-                    -DWITH_DRACO=OFF
-} else {
-    configure.args-append \
-                    -DGDAL_INCLUDE_DIR=${prefix}/include \
-                    -DGDAL_LIBRARY=${prefix}/lib/libgdal.dylib \
-                    -DGEOS_INCLUDE_DIR=${prefix}/include \
-                    -DGEOS_LIBRARY=${prefix}/lib/libgeos_c.dylib \
-                    -DGSL_CONFIG=${prefix}/bin/gsl-config \
-                    -DSPATIALITE_INCLUDE_DIR=${prefix}/include \
-                    -DSPATIALITE_LIBRARY=${prefix}/lib/libspatialite.dylib
-}
-
 configure.ldflags   "-Wl,-rpath,${prefix}/libexec/qt5/lib"
 
-if {$subport eq $name} {
-    variant draco description {Add Draco support} {
-        depends_lib-append      port:draco
-        configure.args-replace  -DWITH_DRACO=OFF -DWITH_DRACO=ON
-    }
-    default_variants +draco
+variant draco description {Add Draco support} {
+    depends_lib-append      port:draco
+    configure.args-replace  -DWITH_DRACO=OFF -DWITH_DRACO=ON
 }
+default_variants +draco
 
 # GRASS variants
 variant grass7 conflicts grass description "Build GRASS 7 plugin" {
@@ -263,20 +246,12 @@ foreach pjver ${proj_versions} {
 foreach proj_ver ${proj_versions} {
     set index [lsearch -exact ${proj_variants} proj${proj_ver}]
     set cflcts [lreplace ${proj_variants} ${index} ${index}]
-    if {$subport eq $name} {
-        variant proj${proj_ver} description "Use Proj${proj_ver}" conflicts {*}${cflcts} "
-            depends_lib-append        port:proj${proj_ver}
-            configure.args-append     -DPROJ_ROOT=${prefix}/lib/proj${proj_ver}
-            configure.cppflags-append -I${prefix}/lib/proj${proj_ver}/include
-            configure.ldflags-append  -L${prefix}/lib/proj${proj_ver}/lib
-        "
-    } else {
-        variant proj${proj_ver} description "Use Proj${proj_ver}" conflicts {*}${cflcts} "
-            depends_lib-append        port:proj${proj_ver}
-            configure.args-append     -DPROJ_INCLUDE_DIR=${prefix}/lib/proj${proj_ver}/include \
-                                      -DPROJ_LIBRARY=${prefix}/lib/proj${proj_ver}/lib/libproj.dylib
-        "
-    }
+    variant proj${proj_ver} description "Use Proj${proj_ver}" conflicts {*}${cflcts} "
+        depends_lib-append        port:proj${proj_ver}
+        configure.args-append     -DPROJ_ROOT=${prefix}/lib/proj${proj_ver}
+        configure.cppflags-append -I${prefix}/lib/proj${proj_ver}/include
+        configure.ldflags-append  -L${prefix}/lib/proj${proj_ver}/lib
+    "
 }
 set projdf "if {"
 foreach pv ${proj_versions} {
