--- a/perl/p5-business-isbn-data/Portfile
+++ b/perl/p5-business-isbn-data/Portfile
@@ -4,7 +4,7 @@ PortSystem          1.0
 PortGroup           perl5 1.0
 
 perl5.branches      5.28 5.30 5.32 5.34
-perl5.setup         Business-ISBN-Data 20240209.001 ../../authors/id/B/BD/BDFOY
+perl5.setup         Business-ISBN-Data 20240229.001 ../../authors/id/B/BR/BRIANDFOY
 revision            0
 license             Artistic-2
 maintainers         nomaintainer
@@ -18,6 +18,6 @@ long_description    This package provides ISBN data used by the \
 platforms           {darwin any}
 supported_archs     noarch
 
-checksums           rmd160  56a6d0494381c591e3e7c2a29c0581d942355821 \
-                    sha256  85756e192c123871ac724c216fcd11be38a43a8e133c05bad0bdb09a22aac3fc \
-                    size    33496
+checksums           rmd160  8a4bd2102311348dd7f3a8588574110fec866b3d \
+                    sha256  371c7928b7b1e8da56daa5b7a419d0a334dca7498af3e3e45ef0e770d9e3219d \
+                    size    33530
