py-notebook: patch for traitlets >5.9.0
* patch to workaround moving of warn submodule

Closes: https://trac.macports.org/ticket/69419

--- a/python/py-notebook/Portfile
+++ b/python/py-notebook/Portfile
@@ -5,7 +5,7 @@ PortGroup           python 1.0
 
 name                py-notebook
 version             6.4.11
-revision            0
+revision            1
 categories-append   devel science
 license             BSD
 supported_archs     noarch
@@ -23,6 +23,9 @@ homepage            https://jupyter.org
 checksums           rmd160  cf55b90f08ca88013ab60b4b39931a9d6535b55f \
                     sha256  709b1856a564fe53054796c80e17a67262071c86bfbdfa6b96aaa346113c555a \
                     size    14373938
+
+patchfiles          traittypes.py.diff
+patch.dir           ${worksrcpath}/notebook
 
 if {${name} ne ${subport}} {
     depends_build-append \
