py-notebook: update to 7.1.1

--- a/python/py-notebook/Portfile
+++ b/python/py-notebook/Portfile
@@ -4,14 +4,15 @@ PortSystem          1.0
 PortGroup           python 1.0
 
 name                py-notebook
-version             6.4.11
-revision            1
+version             7.1.1
+revision            0
 categories-append   devel science
 license             BSD
 supported_archs     noarch
 platforms           {darwin any}
 
-python.versions     37 38 39 310 311 312
+python.versions     38 39 310 311 312
+python.pep517_backend   hatch
 
 maintainers         {stromnov @stromnov} openmaintainer
 
@@ -20,35 +21,23 @@ long_description    {*}${description}
 
 homepage            https://jupyter.org
 
-checksums           rmd160  cf55b90f08ca88013ab60b4b39931a9d6535b55f \
-                    sha256  709b1856a564fe53054796c80e17a67262071c86bfbdfa6b96aaa346113c555a \
-                    size    14373938
-
-patchfiles          traittypes.py.diff
-patch.dir           ${worksrcpath}/notebook
+checksums           rmd160  f5b87d5c2e5e12c02ae8373920981f1e68bb5789 \
+                    sha256  818e7420fa21f402e726afb9f02df7f3c10f294c02e383ed19852866c316108b \
+                    size    4896811
 
 if {${name} ne ${subport}} {
     depends_build-append \
-                    port:py${python.version}-setuptools \
-                    port:py${python.version}-jupyter_packaging
+                        port:py${python.version}-hatch-jupyter-builder
 
-    depends_lib-append  port:py${python.version}-jinja2 \
-                        port:py${python.version}-tornado \
-                        port:py${python.version}-zmq \
-                        port:py${python.version}-argon2-cffi \
-                        port:py${python.version}-ipython_genutils \
-                        port:py${python.version}-traitlets \
-                        port:py${python.version}-jupyter_core \
-                        port:py${python.version}-jupyter_client \
-                        port:py${python.version}-nbformat \
-                        port:py${python.version}-nbconvert \
-                        port:py${python.version}-ipykernel \
-                        port:py${python.version}-send2trash \
-                        port:py${python.version}-terminado \
-                        port:py${python.version}-prometheus_client
+    depends_lib-append  port:py${python.version}-jupyter_server \
+                        port:py${python.version}-jupyterlab \
+                        port:py${python.version}-jupyterlab_server \
+                        port:py${python.version}-notebook_shim \
+                        port:py${python.version}-tornado
 
-    if {${python.version} < 38} {
-        depends_run-append \
-                    port:py${python.version}-importlib-metadata
+    patchfiles-append   patch-pyproject.toml.diff
+
+    post-patch {
+        reinplace "s|@@PYTHON_BRANCH@@|${python.branch}|g" ${worksrcpath}/pyproject.toml
     }
 }
