--- a/python/py-colorcet/Portfile
+++ b/python/py-colorcet/Portfile
@@ -24,5 +24,5 @@ if {${name} ne ${subport}} {
     depends_build-append \
                     port:py${python.version}-param \
                     port:py${python.version}-pyct \
-                    port:py${python.version}-setuptools
+                    port:py${python.version}-setuptools_scm
 }
