--- a/perl/p5-cgi/Portfile
+++ b/perl/p5-cgi/Portfile
@@ -5,7 +5,7 @@ PortGroup           perl5 1.0
 
 name                p5-cgi
 perl5.branches      5.28 5.30 5.32 5.34
-perl5.setup         CGI 4.61 ../../authors/id/L/LE/LEEJO
+perl5.setup         CGI 4.62 ../../authors/id/L/LE/LEEJO
 revision            0
 license             Artistic-2
 maintainers         nomaintainer
@@ -17,9 +17,9 @@ long_description    {*}${description} CGI is considered to be a legacy \
 platforms           {darwin any}
 supported_archs     noarch
 
-checksums           rmd160  5024f159df5ebdea81bf0e7838caf6b6fbe28c29 \
-                    sha256  124874079f0c9af8e37ca7bfcc8134098379aed30751df3f38896b557b471711 \
-                    size    207544
+checksums           rmd160  52730088c0baefe27b2e955214cbee576d668cd5 \
+                    sha256  b3619821c7aeba3fe1235985fc18f515049a2422ebfc680799cc30007faa80c5 \
+                    size    208782
 
 if {${perl5.major} != ""} {
     depends_build-append \
@@ -28,7 +28,8 @@ if {${perl5.major} != ""} {
                     port:p${perl5.major}-test-warn
 
     depends_lib-append \
-                    port:p${perl5.major}-html-parser
+                    port:p${perl5.major}-html-parser \
+                    port:p${perl5.major}-uri
 }
 
 livecheck.type      regex
