legacy-support: replace maintainer
Adds new maintainers, and removes jonesc as requested.

Temporarily removes openmaintainer, until compatibility issue in
upcoming version is resolved.

--- a/devel/legacy-support/Portfile
+++ b/devel/legacy-support/Portfile
@@ -10,7 +10,8 @@ name                legacy-support
 categories          devel
 platforms           darwin
 
-maintainers         {jonesc @cjones051073} openmaintainer
+maintainers         {mascguy @mascguy} \
+                    {fwright.net:fw @fhgwright}
 license             MIT BSD APSL-2
 
 description         Installs wrapper headers to add missing functionality to legacy OSX versions.
@@ -20,6 +21,8 @@ long_description    {*}${description}
 epoch               1
 
 # Primary release version
+# NOTE: At present, v1.2.0 has a compatibility issue.
+# Do not update until this is resolved.
 set release_ver     1.1.1
 
 # Binary compatibility version
