--- a/python/py-npx/Portfile
+++ b/python/py-npx/Portfile
@@ -25,16 +25,13 @@ checksums           rmd160  84e659f329884c4fea16481b4a223610fa1e5915 \
                     sha256  b439c45bb95647df7fb020278f4fd59869f615ef6a13d096b49335a3f7537305 \
                     size    10809
 
-python.versions     37 38 39 310 311 312
+python.versions     38 39 310 311 312
 
 if {${name} ne ${subport}} {
-    python.pep517           yes
     python.pep517_backend   flit
 
     depends_lib-append \
                     port:py${python.version}-colorama \
                     port:py${python.version}-numpy
-
-    livecheck.type  none
 }
 
