py-jupyterlab: add missing build dependency
Closes: https://trac.macports.org/ticket/69415

--- a/python/py-jupyterlab/Portfile
+++ b/python/py-jupyterlab/Portfile
@@ -30,8 +30,8 @@ checksums           rmd160  5f7c303e32dd6f4ae05251f6bc9abd176d5b8d38 \
                     size    21810592
 
 if {${name} ne ${subport}} {
-#    depends_build-append \
-#                        port:py${python.version}-hatch-jupyter-builder
+    depends_build-append \
+                        port:py${python.version}-hatch-jupyter-builder
 
     depends_lib-append  port:py${python.version}-async-lru \
                         port:py${python.version}-httpx \
