pcre2: fix build on 10.6

--- a/devel/pcre/Portfile
+++ b/devel/pcre/Portfile
@@ -18,6 +18,8 @@ subport pcre2 {
         compiler.blacklist-append {*gcc-[3-4].*}
     }
 
+    patchfiles-append   MAP_JIT.patch
+
     github.livecheck.regex  {([0-9.]+)}
 }
 categories          devel
